<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="#161620"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

    <!-- UI -->

    <ImageView
            android:id="@+id/iv_logo"
            android:layout_height="48dp"
            android:layout_width="48dp"
            android:importantForAccessibility="no"
            android:src="@drawable/gg_applogo_500"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline" />

    <!-- Content -->

    <com.google.android.material.card.MaterialCardView
            android:layout_height="0dp"
            android:layout_width="match_parent"
            app:contentPadding="20dp"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Local.Curved.TopA40"
            app:cardBackgroundColor="@color/white"
            app:strokeWidth="0dp"
            android:elevation="6dp"
            app:cardElevation="6dp"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            app:layout_constraintBottom_toBottomOf="parent">

        <androidx.core.widget.NestedScrollView
                android:layout_height="match_parent"
                android:layout_width="match_parent">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">

                <!-- Header -->

                <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:textAlignment="center"
                        android:textSize="28sp"
                        android:fontFamily="@font/variable_inter"
                        android:textFontWeight="600"
                        android:text="@string/join_the_field"
                        android:textColor="#161620"
                        android:layout_marginBottom="48dp" />

                <!-- Inputs -->

                <LinearLayout
                        android:orientation="vertical"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent">

                    <!-- Account -->

                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_marginBottom="36dp"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent">

                        <TextView
                                android:layout_marginBottom="12dp"
                                android:layout_height="wrap_content"
                                android:layout_width="match_parent"
                                android:textSize="16sp"
                                android:fontFamily="@font/variable_inter"
                                android:textFontWeight="600"
                                android:text="@string/account"
                                android:textColor="#161620"
                                android:drawablePadding="8dp"
                                app:drawableStartCompat="@drawable/xic_x16_uic_line_user_plus"
                                app:drawableTint="#161620" />

                        <com.google.android.material.textfield.TextInputLayout
                                style="@style/Widget.Local.Input.Layout"
                                android:hint="@string/sign_up_input_identity_hint"
                                android:layout_height="wrap_content"
                                android:layout_width="match_parent">

                            <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/et_identity"
                                    style="@style/Widget.Local.Input.Layout.EditText"
                                    android:inputType="textEmailAddress"
                                    android:maxLines="1"
                                    android:layout_height="wrap_content"
                                    android:layout_width="match_parent" />

                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <!-- Security -->

                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_marginBottom="48dp"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent">

                        <TextView
                                android:layout_marginBottom="12dp"
                                android:layout_height="wrap_content"
                                android:layout_width="match_parent"
                                android:textSize="16sp"
                                android:fontFamily="@font/variable_inter"
                                android:textFontWeight="600"
                                android:text="@string/security"
                                android:textColor="#161620"
                                android:drawablePadding="8dp"
                                app:drawableStartCompat="@drawable/xic_x16_uic_line_shield"
                                app:drawableTint="#161620" />

                        <com.google.android.material.textfield.TextInputLayout
                                style="@style/Widget.Local.Input.Layout"
                                android:hint="@string/sign_up_input_password_default_hint"
                                app:passwordToggleEnabled="true"
                                app:passwordToggleTint="#161620"
                                android:layout_height="wrap_content"
                                android:layout_width="match_parent">

                            <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/et_password_default"
                                    style="@style/Widget.Local.Input.Layout.EditText"
                                    android:inputType="textPassword"
                                    android:maxLines="1"
                                    android:layout_height="wrap_content"
                                    android:layout_width="match_parent" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <Space
                                android:layout_height="12dp"
                                android:layout_width="0dp" />

                        <com.google.android.material.textfield.TextInputLayout
                                style="@style/Widget.Local.Input.Layout"
                                android:hint="@string/sign_up_input_password_confirm_hint"
                                app:passwordToggleEnabled="true"
                                app:passwordToggleTint="#161620"
                                android:layout_height="wrap_content"
                                android:layout_width="match_parent">

                            <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/et_password_confirm"
                                    style="@style/Widget.Local.Input.Layout.EditText"
                                    android:inputType="textPassword"
                                    android:maxLines="1"
                                    android:layout_height="wrap_content"
                                    android:layout_width="match_parent" />

                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
                </LinearLayout>

                <!-- Controls -->

                <LinearLayout
                        android:orientation="vertical"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent">

                    <!-- Action -->

                    <Button
                            android:id="@+id/bt_sign_up"
                            android:layout_height="52dp"
                            android:layout_width="match_parent"
                            android:text="@string/sign_up_button_sign_up"
                            android:textAllCaps="false"
                            android:textSize="16sp"
                            android:fontFamily="@font/variable_inter"
                            android:textFontWeight="600"
                            android:backgroundTint="@color/primary"
                            android:textColor="#161620"
                            android:background="@drawable/button_border"
                            android:layout_marginBottom="32dp" />

                    <!-- Hyperlinks -->

                    <TextView
                            android:id="@+id/tv_sign_in"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:textSize="14sp"
                            android:fontFamily="@font/variable_inter"
                            android:textFontWeight="600"
                            android:text="@string/sign_up_button_sign_in"
                            android:textColor="#161620"
                            android:textAlignment="center"
                            android:layout_marginBottom="16dp" />

                    <TextView
                            android:id="@+id/tv_faq"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:textSize="14sp"
                            android:fontFamily="@font/variable_inter"
                            android:textFontWeight="600"
                            android:text="@string/sign_up_text_faq"
                            android:textColor="#161620"
                            android:textAlignment="center" />

                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </com.google.android.material.card.MaterialCardView>

    <!-- Guidelines -->

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintGuide_percent="0.15" />

</androidx.constraintlayout.widget.ConstraintLayout> 